Bug 414319 - master branch fails to build from source - error: ‘setFldName’ was not declared in this scope
Summary: master branch fails to build from source - error: ‘setFldName’ was not declar...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-20 07:53 UTC by Rik Mills
Modified: 2020-03-02 07:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.80 (KDE releases 20.03.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rik Mills 2019-11-20 07:53:00 UTC
SUMMARY

Fails to build from source:

https://launchpadlibrarian.net/452246556/buildlog_ubuntu-eoan-amd64.umbrello_4%3A19.08.3+p19.10+git20191120.0024-0_BUILDING.txt.gz

/<<BUILDDIR>>/umbrello-19.08.3+p19.10+git20191120.0024/umbrello/codegenerators/cpp/cppwriter.cpp:972:28: error: ‘setFldName’ was not declared in this scope
  972 |         stream << "set" << setFldName << "(" << className << " " << fullVarName << ")";
      |                            ^~~~~~~~~~
Comment 1 Rik Mills 2019-11-20 08:58:20 UTC
Also fails on KDE Neon builds

https://build.neon.kde.org/job/bionic_unstable_kde_umbrello_bin_amd64/133/console
Comment 2 Ralf Habacker 2019-11-20 09:15:21 UTC
Git commit 0ff187e4edda1d3c08d8ab59092d322061495b27 by Ralf Habacker.
Committed on 20/11/2019 at 09:08.
Pushed by habacker into branch 'master'.

Fix compiled error caused by incomplete merge fix on rebasing

Fixup of commit abcdd7fec4207d9d60a69b2f5e34b583fbaf7465.
FIXED-IN: 2.30.70 (KDE Release 20.03.70)

M  +1    -1    umbrello/codegenerators/cpp/cppwriter.cpp

https://invent.kde.org/kde/umbrello/commit/0ff187e4edda1d3c08d8ab59092d322061495b27