Fix compiled error caused by incomplete merge fix on rebasing

Fixup of commit abcdd7fec4207d9d60a69b2f5e34b583fbaf7465.

BUG:414319
FIXED-IN: 2.30.70 (KDE Release 20.03.70)